# pinecone-actions-plugin

./: .gitignore  pyproject.toml
local-server/: api.yaml  main.py  semantic-search.ipynb
