[tool.poetry]
name = "gpt test"
version = "0.1.0"
description = ""
authors = ["Gabriel Freitas <gabriel.freitas@toradex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"
openai = "^1.35.13"
datasets = "^2.20.0"
pinecone = "^4.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
